--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  padding-top: 5%;
+
 }
 
 .App-logo {
@@ -35,4 +37,61 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+
+/* date picker css */
+
+
+.container{
+  margin:5%;
+  width: 86%;
+  height:auto;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  max-width: 700px;
+
+
+}
+
+.headerContainer{
+  display: flex;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgb(204, 192, 192);
+  background-color: #063b71;
+  justify-content: flex-end;
+}
+.bodyContainer{
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #fff;
+  padding-left: 2px;
+  padding-right: 2px;
+  padding-bottom: 2px;
+  /* padding:10px */
+
+}
+
+.daySty{
+  width: 14.28%;
+  padding-bottom: 10px;
+  font-size: .9rem;
+  text-align: center;
+  height: 30px;
+  line-height: 30px;
+
+}
+.daySty:hover{
+background-color: whitesmoke;
+border-radius: 10px;
+cursor: pointer;
+}
+
+.dropdown{
+  padding: 10px;
+  border-radius: 5px;
+  color: #063b71;
+  margin: 2%;
 }
