--- a/src/App.css
+++ b/src/App.css
@@ -59,10 +59,26 @@
   display: flex;
   padding-top: 20px;
   padding-bottom: 20px;
-  border-bottom: 1px solid rgb(204, 192, 192);
   background-color: #063b71;
-  justify-content: flex-end;
+  justify-content: space-around;
 }
+.amPicker{
+  display: flex;
+}
+.enPicker{
+  display: flex;
+flex-direction: row;
+align-items: center;
+}
+
+.enDate{
+  color: #fff;
+padding: 5px;
+font-size: 1rem;
+font-weight: bold;
+}
+
+
 .bodyContainer{
   display: flex;
   flex-wrap: wrap;
@@ -76,22 +92,47 @@
 
 .daySty{
   width: 14.28%;
-  padding-bottom: 10px;
+  padding-bottom: 30px;
   font-size: .9rem;
   text-align: center;
   height: 30px;
-  line-height: 30px;
+  /* line-height: 30px; */
 
 }
-.daySty:hover{
-background-color: whitesmoke;
-border-radius: 10px;
-cursor: pointer;
-}
+
 
 .dropdown{
   padding: 10px;
   border-radius: 5px;
   color: #063b71;
   margin: 2%;
+}
+.multiDate{
+  display: flex;
+  flex-direction: column;
+  background-color: whitesmoke;
+  margin: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  /* padding: 2px; */
+  border-radius: 5px;
+}
+.multiDate:hover{
+  cursor: pointer;
+  }
+
+.amDay{
+  font-size: 1.3rem;
+
+}
+.enDay{
+  font-size: .7rem;
+  text-align: right;
+  padding-right: 5px;
+}
+
+@media only screen and (max-width: 600px) {
+  .enPicker {
+    flex-direction: column;
+  }
 }
